--- a/crazyshit.ipynb
+++ b/crazyshit.ipynb
@@ -23,9 +23,9 @@
     ")\n",
     "\n",
     "# ✅ Set up environment variables (hide keys in real projects!)\n",
-    "os.environ[\"SERPER_API_KEY\"] = \"9eb217a4dafaacf660512036ef3c7beb993eb52b930f68806914ee0122dd5951\"\n",
-    "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyATAPqdoOgqJiGQbf2qicGTK8Co2JLE7bo\"\n",
-    "# os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"SERPER_API_KEY\"] = \"<Key>\"\n",
+    "os.environ[\"GEMINI_API_KEY\"] = \"<KEY>\"\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"<KEY>\"\n",
     "# ✅ Instantiate toolsS\n",
     "docs_tool = DirectoryReadTool(directory='./blog-posts')\n",
     "file_tool = FileReadTool()\n",
